# my-env

./: .dockerignore  .gitignore  README.md  app.py  inference.py  models.py  openenv.yaml  pyproject.toml  replacements.txt  requirements.txt  support_env.py  validate-submission.sh
server/: app.py  grader.py  support_env.py  tasks.py
tasks/tkt_001/: grader.py
tasks/tkt_002/: grader.py
tasks/tkt_003/: grader.py
test_env/: README.md  client.py  models.py  pyproject.toml
test_env/server/: app.py  test_env_environment.py
